# book-library

./: .dockerignore  .env-example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
